--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos - paginação</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -23,11 +23,11 @@
     <div class="div-table mb-4">
 
         <div class="my-4 p-3 head-search border-bottom">
-            <form action="" method="post">
+            <form th:action="@{/product/search}" method="POST">
                 <div class="row">
                     <label for="inputSearch" class="col-sm-1 col-form-label ps-0">Pesquisar</label>
                     <div class="col-sm-10">
-                        <input type="search" class="form-control" id="inputSearch">
+                        <input type="search" name="search" class="form-control" id="inputSearch">
                     </div>
                     <div class="col-sm-1">
                         <button class="btn-outline-search ">Buscar</button>
@@ -46,65 +46,11 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Notebook</td>
-                    <td>R$: 6.000,00</td>
-                    <td>34</td>
-                    <td>#453212</td>
-                </tr>
-                <tr>
-                    <td>Mouse</td>
-                    <td>R$: 51,50</td>
-                    <td>21</td>
-                    <td>#689656</td>
-                </tr>
-                <tr>
-                    <td>Notebook</td>
-                    <td>R$: 6.000,00</td>
-                    <td>34</td>
-                    <td>#453212</td>
-                </tr>
-                <tr>
-                    <td>Mouse</td>
-                    <td>R$: 51,50</td>
-                    <td>21</td>
-                    <td>#689656</td>
-                </tr>
-                <tr>
-                    <td>Notebook</td>
-                    <td>R$: 6.000,00</td>
-                    <td>34</td>
-                    <td>#453212</td>
-                </tr>
-                <tr>
-                    <td>Mouse</td>
-                    <td>R$: 51,50</td>
-                    <td>21</td>
-                    <td>#689656</td>
-                </tr>
-                <tr>
-                    <td>Notebook</td>
-                    <td>R$: 6.000,00</td>
-                    <td>34</td>
-                    <td>#453212</td>
-                </tr>
-                <tr>
-                    <td>Mouse</td>
-                    <td>R$: 51,50</td>
-                    <td>21</td>
-                    <td>#689656</td>
-                </tr>
-                <tr>
-                    <td>Notebook</td>
-                    <td>R$: 6.000,00</td>
-                    <td>34</td>
-                    <td>#453212</td>
-                </tr>
-                <tr>
-                    <td>Mouse</td>
-                    <td>R$: 51,50</td>
-                    <td>21</td>
-                    <td>#689656</td>
+                <tr th:each="product : ${products}">
+                    <td th:text="${product.name}">Notebook</td>
+                    <td th:text="'R$: ' + ${#numbers.formatDecimal(product.price, 0, 'POINT', 2, 'COMMA')}">6.000,00</td>
+                    <td th:text="${product.qntStorage}">34</td>
+                    <td th:text="${product.code}">#453212</td>
                 </tr>
             </tbody>
         </table>
