--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,74 +2,92 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos - paginação</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Produtos - paginação</title>
+	<link rel="stylesheet" href="/css/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+		integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+		integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+		crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <div class="div-table mb-4">
+	<div class="div-table mb-4">
 
-        <div class="my-4 p-3 head-search border-bottom">
-            <form th:action="@{/product/search}" method="GET">
-                <div class="row">
-                    <label for="inputSearch" class="col-sm-1 col-form-label ps-0">Pesquisar</label>
-                    <div class="col-sm-10">
-                        <input type="search" name="search" class="form-control" id="inputSearch" placeholder="Deixe vazio para buscar todos os itens...">
-                    </div>
-                    <div class="col-sm-1">
-                        <button class="btn-outline-search ">Buscar</button>
-                    </div>
-                </div>
-            </form>
-        </div>
+		<div class="my-4 p-3 head-search border-bottom">
+			<form th:action="@{/product/search}" method="GET">
+				<div class="row">
+					<label for="inputSearch" class="col-sm-1 col-form-label ps-0">Pesquisar</label>
+					<div class="col-sm-10">
+						<input type="text" name="search" class="form-control" id="inputSearch"
+							placeholder="Deixe vazio para buscar todos os itens..." th:value="${returnSearch}">
+					</div>
+					<div class="col-sm-1">
+						<button class="btn-outline-search ">Buscar</button>
+					</div>
+				</div>
+			</form>
+		</div>
 
-        <table class="main-table table table-striped shadow rounded-3 ">
-            <thead>
-                <tr>
-                    <th>Produto</th>
-                    <th>Valor</th>
-                    <th>Qnt. Estoque</th>
-                    <th>Código</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="product : ${products}">
-                    <td th:text="${product.name}">Notebook</td>
-                    <td th:text="'R$: ' + ${#numbers.formatDecimal(product.price, 0, 'POINT', 2, 'COMMA')}">6.000,00</td>
-                    <td th:text="${product.qntStorage}">34</td>
-                    <td th:text="${product.code}">#453212</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+		<table class="main-table table table-striped shadow rounded-3 ">
+			<thead>
+				<tr>
+					<th>Produto</th>
+					<th>Valor</th>
+					<th>Qnt. Estoque</th>
+					<th>Código</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="product : ${products}">
+					<td th:text="${product.name}">Notebook</td>
+					<td th:text="'R$: ' + ${#numbers.formatDecimal(product.price, 0, 'POINT', 2, 'COMMA')}">6.000,00
+					</td>
+					<td th:text="${product.qntStorage}">34</td>
+					<td th:text="${product.code}">#453212</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 
 
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Anterior</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Próximo</a>
-            </li>
-        </ul>
-    </nav>
+	<nav aria-label="Page navigation">
+		<ul class="pagination justify-content-center">
+			<li class="page-item " th:classappend="${currentPage == 0} ? 'disabled'">
+				<a class="page-link"
+					th:href="@{/product/search(search=${returnSearch}, page=${currentPage - 1})}">Anterior</a>
+			</li>
+			<li class="page-item" th:if="${numberOfPages < 3}"
+				th:each="number : ${#numbers.sequence(0, (numberOfPages-1))}">
+				<a class="page-link" th:href="@{/product/search(search=${returnSearch}, page=${number})}"
+					th:text="${number+1}">1</a>
+			</li>
+			<li class="page-item" th:if="${numberOfPages > 3}">
+				<a class="page-link" href="#">1</a>
+			</li>
+			<li class="page-item" th:if="${numberOfPages > 3}">
+				<a class="page-link" href="#">2</a>
+			</li>
+			<li class="page-item" th:if="${numberOfPages > 3}">
+				<a class="page-link" href="#">...</a>
+			</li>
+			<li class="page-item" th:if="${numberOfPages > 3}">
+				<a class="page-link" href="#" th:text="${numberOfPages}">num</a>
+			</li>
+			<li class="page-item" th:classappend="${currentPage == (numberOfPages - 1)} ? 'disabled'">
+				<a class="page-link"
+					th:href="@{/product/search(search=${returnSearch}, page=${currentPage + 1})}">Próximo</a>
+			</li>
+		</ul>
+	</nav>
 
 </body>
 
