--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-	<div class="div-table mb-4">
+	<div class="div-table mb-4" >
 
 		<div class="my-4 p-3 head-search border-bottom">
 			<form th:action="@{/product/search}" method="GET">
@@ -37,57 +37,58 @@
 			</form>
 		</div>
 
-		<table class="main-table table table-striped shadow rounded-3 ">
-			<thead>
-				<tr>
-					<th>Produto</th>
-					<th>Valor</th>
-					<th>Qnt. Estoque</th>
-					<th>Código</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="product : ${products}">
-					<td th:text="${product.name}">Notebook</td>
-					<td th:text="'R$: ' + ${#numbers.formatDecimal(product.price, 0, 'POINT', 2, 'COMMA')}">6.000,00
-					</td>
-					<td th:text="${product.qntStorage}">34</td>
-					<td th:text="${product.code}">#453212</td>
-				</tr>
-			</tbody>
-		</table>
+		<div th:if="${products}">
+			<table class="main-table table table-striped shadow rounded-3 ">
+				<thead>
+					<tr>
+						<th>Produto</th>
+						<th>Valor</th>
+						<th>Qnt. Estoque</th>
+						<th>Código</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="product : ${products}">
+						<td th:text="${product.name}">Notebook</td>
+						<td th:text="'R$: ' + ${#numbers.formatDecimal(product.price, 0, 'POINT', 2, 'COMMA')}">6.000,00
+						</td>
+						<td th:text="${product.qntStorage}">34</td>
+						<td th:text="${product.code}">#453212</td>
+					</tr>
+				</tbody>
+			</table>
+
+			<nav aria-label="Page navigation" th:if="${!products.isEmpty()}">
+				<ul class="pagination justify-content-center">
+					<li class="page-item " th:classappend="${currentPage == 0} ? 'disabled'">
+						<a class="page-link"
+							th:href="@{/product/search(search=${returnSearch}, page=${currentPage - 1})}">Anterior</a>
+					</li>
+					<li class="page-item" th:if="${numberOfPages < 3}"
+						th:each="number : ${#numbers.sequence(0, (numberOfPages-1))}">
+						<a class="page-link" th:href="@{/product/search(search=${returnSearch}, page=${number})}"
+							th:text="${number+1}">1</a>
+					</li>
+					<li class="page-item" th:if="${numberOfPages > 3}">
+						<a class="page-link" href="#">1</a>
+					</li>
+					<li class="page-item" th:if="${numberOfPages > 3}">
+						<a class="page-link" href="#">2</a>
+					</li>
+					<li class="page-item" th:if="${numberOfPages > 3}">
+						<a class="page-link" href="#">...</a>
+					</li>
+					<li class="page-item" th:if="${numberOfPages > 3}">
+						<a class="page-link" href="#" th:text="${numberOfPages}">num</a>
+					</li>
+					<li class="page-item" th:classappend="${currentPage == (numberOfPages - 1)} ? 'disabled'">
+						<a class="page-link"
+							th:href="@{/product/search(search=${returnSearch}, page=${currentPage + 1})}">Próximo</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 	</div>
-
-
-	<nav aria-label="Page navigation">
-		<ul class="pagination justify-content-center">
-			<li class="page-item " th:classappend="${currentPage == 0} ? 'disabled'">
-				<a class="page-link"
-					th:href="@{/product/search(search=${returnSearch}, page=${currentPage - 1})}">Anterior</a>
-			</li>
-			<li class="page-item" th:if="${numberOfPages < 3}"
-				th:each="number : ${#numbers.sequence(0, (numberOfPages-1))}">
-				<a class="page-link" th:href="@{/product/search(search=${returnSearch}, page=${number})}"
-					th:text="${number+1}">1</a>
-			</li>
-			<li class="page-item" th:if="${numberOfPages > 3}">
-				<a class="page-link" href="#">1</a>
-			</li>
-			<li class="page-item" th:if="${numberOfPages > 3}">
-				<a class="page-link" href="#">2</a>
-			</li>
-			<li class="page-item" th:if="${numberOfPages > 3}">
-				<a class="page-link" href="#">...</a>
-			</li>
-			<li class="page-item" th:if="${numberOfPages > 3}">
-				<a class="page-link" href="#" th:text="${numberOfPages}">num</a>
-			</li>
-			<li class="page-item" th:classappend="${currentPage == (numberOfPages - 1)} ? 'disabled'">
-				<a class="page-link"
-					th:href="@{/product/search(search=${returnSearch}, page=${currentPage + 1})}">Próximo</a>
-			</li>
-		</ul>
-	</nav>
 
 </body>
 
